<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cstring">C</string>
    <string name="dstring">DEL</string>
    <string name="andstring">+</string>
    <string name="multistring">x</string>
    <string name="sevenString">7</string>
    <string name="eightString">8</string>
    <string name="nineString">9</string>
    <string name="decreaseString">-</string>
    <string name="divisionString">÷</string>
    <string name="oneString">1</string>
    <string name="twoString">2</string>
    <string name="sixString">6</string>
    <string name="fourString">4</string>
    <string name="fiveString">5</string>
    <string name="threeString">3</string>
    <string name="zeroString">0</string>
    <string name="dotString">.</string>
    <string name="equalString">=</string>

</resources>
